# action_controller

./: CMakeLists.txt  README.md  package.xml
action/: BoxesRefexpQuery.action  DenseCaption.action  DenseImageQuery.action  DenseRefexpLoad.action  DenseRefexpLoadBBoxes.action  DenseRefexpLoadQuery.action  DenseRefexpQuery.action  ExtractFeatures.action  Localize.action  LocalizeProbs.action  LocalizeQuery.action  MultiDofFollowJointTrajectory.action  RelevancyClustering.action
cfg/: RefexpMicoDemo.cfg
msg/: MultiDofFollowJointTrajectoryAction.msg  MultiDofFollowJointTrajectoryActionFeedback.msg  MultiDofFollowJointTrajectoryActionGoal.msg  MultiDofFollowJointTrajectoryActionResult.msg  MultiDofFollowJointTrajectoryFeedback.msg  MultiDofFollowJointTrajectoryGoal.msg  MultiDofFollowJointTrajectoryResult.msg
scripts/: dynamic_reconfigure_client.py  dynamic_reconfigure_server.py  follow_camera.py
src/: actionController.cpp  controller_priority_mux.cpp  drone_state_publisher.cpp  ekf_state_publisher.cpp
test/: dense_query_example.py  dense_refexp_example.py  dense_relevancy_refexp_example.py  ingress_pomdp.py
test/ingress_pomdp/: densecap_vocabulary.txt  vocab.py
